--- a/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
+++ b/AlgoritmosGeneticos/experimento A.01 - busca aleatoria.ipynb
@@ -19,7 +19,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Uma forma simples de se encontrar uma solução para um `problema de otimização` é realizando uma `busca aleatória`. A busca aleatória, como o próprio nome sugere, é um algoritmo onde um certo `espaço de busca` é definido de onde sorteamos `candidatos` de soluções para o problema.\n",
     "\n",
@@ -123,7 +125,6 @@
    "outputs": [],
    "source": [
     "# constantes\n",
-    "\n",
     "N = 8 #quantidade de sorteios\n",
     "NUM_GENES = 4 # quantidade de genes (caixas) "
    ]
@@ -137,14 +138,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 1, 0, 0] 2\n",
+      "[0, 0, 1, 0] 1\n",
       "[0, 0, 0, 1] 1\n",
       "[1, 0, 1, 0] 2\n",
-      "[1, 0, 1, 0] 2\n",
-      "[1, 0, 1, 1] 3\n",
-      "[0, 0, 1, 1] 2\n",
-      "[1, 1, 0, 1] 3\n",
-      "[0, 0, 0, 1] 1\n"
+      "[0, 1, 1, 1] 3\n",
+      "[0, 0, 1, 0] 1\n",
+      "[0, 0, 0, 0] 0\n",
+      "[1, 1, 0, 0] 2\n",
+      "[0, 1, 0, 0] 1\n"
      ]
     }
    ],
@@ -167,15 +168,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resolvemos o problema das caixas binárias depois de várias rodadas, concluindo que é um problema probabilistico pois os resultados obtido foram diferentes em cada rodada."
+    "Nesse experimento, buscamos explorar o algoritmo de busca aleatória para resolver o problema das caixas binárias. O algoritmo de busca aleatória é usado para resolver questões de otimização e é baseado na escolha aleatória de candidatos dentro de um espaço de busca. Esse algoritmo funciona em quatro passos basicamente: criação de um espaço de busca, sorteio de um candidato, cálculo da função objetiva para o candidato, e verificação do critério de parada: caso tenha sido atingido, para e retorna o candidato com melhor resultado, caso contrário, volta para o sorteio. \n",
+    "\n",
+    "Nesse caso nós estamos tentando resolver o problema das caixas binárias. Escolhemos um número de caixas, cada uma contém um valor 0 ou 1, escolhemos o conjunto de caixas cuja soma é a maior possível. Ou seja, estamos em um problema de maximização. \n",
+    "\n",
+    "Para resolver esse problema criamos as funções: gene_cb, individuo_cb e uma função objetiva. A função gene gerava os valos para cada caixa, a função individuo juntava n valores de genes para criar um indivíduo, por fim, a função objetivo soma os valores dos genes de cada indivíduo. A resposta de ter chegado ou não no valor otimizado nós mesmo fizemos. \n",
+    "\n",
+    "Esse é um problema probabilístico, pois existe uma probabilidade de conseguirmos o melhor resultado possível em uma determinada quantidade de testes, e cada vez que testarmos podemos encontrar valores diferentes de soma das caixas, dos quais podem ou não ter nosso valor esperado (nesse caso a soma máxima é 4, pois estamos com quatro caixas). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Playground\n",
-    "\n"
+    "## Playground"
    ]
   },
   {
