--- a/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
+++ b/AlgoritmosGeneticos/experimento A.02 - busca em grade.ipynb
@@ -204,7 +204,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testamos duas maneiras de fazer a busca em grade, a primeira levava muitos comandos e repetições, para a segunda conseguimos ser mais resumidos importando o intertools"
+    "O objetivo desse experimento foi introduzir o conceito de busca em grade, que consiste em testar todas as combinações possíveis. Para executar um algoritmo de busca em grade usamos os passos: definir os parâmetros e seus respectivos valores, executar uma função objetivo para todas as combinações possíveis, retornar as combinações com melhores resultados. \n",
+    "\n",
+    "Usamos esse método para resolver o mesmo problema do exercício anterior, buscamos enontrar o indivíduo cuja soma dos genes é maximizada, é maior. Com esse método conseguimos encontrar sempre o maior valor possível, 4. \n",
+    "\n",
+    "A resolução se deu da mesma maneira, com diferença que dessa vez não elegemos os melhores candidatos, mas sim, usamos todos eles. Portanto nosso código foi dividido em individuo, e função objetiva. Observação, testamos duas maneiras de fazer a busca em grade, a primeira levava muitos comandos e repetições, para a segunda conseguimos ser mais resumidos importando o intertools. \n",
+    "\n",
+    "Este é um algoritmo de maximização, apesar de que a busca em grade pode ser usada para problemas de minimização também, um exemplo interessante é otimizar hiper parâmetros de modelos de aprendizado de máquinas, como árvores de decisões. Por fazer um screening de todas as opções de combinações esse é um exemplo de busca determinístico, pois todas as possibilidades são levadas em consideração, portanto, não imposta se rodarmos o código diversas vezes, sempre teremos o mesmo resultado. "
    ]
   },
   {
