--- a/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
+++ b/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
@@ -238,7 +238,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resolvemos o problema das caixas binárias acrescentando seleção e cruzamento, desta maneira o problema deixa de ser apenas probabilistico e necessita de menos repetições. Acrescentamos também o conceito de cruzamento e mutção genética, que permitiu a passagem das melhores caracteristicas para a próxima \"geração\" de respostas. "
+    "Através desse experimento fomos introduzidos aos algoritmos genéticos, eles funcionam da seguinte maneira: seleção de uma população aleatória, aprimoramento das gerações seguintes usando cruzamento e mutações. O resultado esperado é de que as próximas gerações tenham características melhoradas. \n",
+    "\n",
+    "Podemos entender o algoritmo genético nas seguintes etapas: \n",
+    "\n",
+    "1- Criação da população inicial aleatória; \n",
+    "\n",
+    "2- Fazemos a função objetiva para todos os membros da população inicial; \n",
+    "\n",
+    "3- Seleção dos melhores indivíduos que devem seguir para as próximas gerações. \n",
+    "\n",
+    "4- Cruzamento dos indivíduos selecionados, garante diversidade; \n",
+    "\n",
+    "5- Mutação, acontece entre a nova população (traz informação nova para a população); \n",
+    "\n",
+    "6- Função objetiva é calculada novamente para todos os membros novos; \n",
+    "\n",
+    "7- Critérios de paradas são verificados; \n",
+    "\n",
+    "8- Retorna o hall da fama, a parte da população que deu melhor resultado para nosso problema. \n",
+    "\n",
+    "Usamos esse método para atacar novamente o problema das caixas binárias, dessa vez nosso código seguiu a ordem dos algoritmos genéticos, que trouxe as mudanças de: definir número de gerações, tamanho da população, chance de cruzamento, chance de mutação, fitness. Algumas funções também foram adicionadas, como: função população, função de cruzamento, seleção por roleta máxima, e mutação. \n",
+    "\n",
+    "As funções têm os seguintes objetivos: \n",
+    "\n",
+    "- Função população: cria a população inicial, usa da função indivíduo que por sua vez usa da função gene, ambas já criadas anteriormente; \n",
+    "\n",
+    "- Função de seleção roleta máxima: seleciona indivíduos aleatoriamente, considerando o fitness como a possibilidade de serem selecionados e o tamanho da população como o tamanho da lista dos próximos selecionados (população nova); \n",
+    "\n",
+    "- Cruzamento simples: é escolhido um ponto aleatório entre os genes dos indivíduos para cortar os genes do pai e da mãe, os filhos recebem uma mistura desses genes; \n",
+    "\n",
+    "- Mutação: são gerados novos genes para o indivíduo, podendo melhorar os resultados da função objetivo ou piorar. \n",
+    "\n",
+    "- Fitness: calculado na função objetivo da população das caixas binárias, é a soma dos genes, quanto maior o resultado da soma, maior o fitness do indivíduo. \n",
+    "\n",
+    "Desta maneira, pudemos resolver o problema das caixas binárias acrescentando seleção, cruzamento e mutação, partes essenciais para resolução de um algoritmo genético. Assim o problema deixa de ser apenas probabilístico e necessita de menos repetições. Os conceitos de cruzamento e mutação genética, permitiram a passagem das melhores características para a próxima \"geração\" de respostas. "
    ]
   },
   {
