--- a/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
+++ b/AlgoritmosGeneticos/experimento A.04 - caixas nao-binarias.ipynb
@@ -51,13 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -86,7 +79,6 @@
    "source": [
     "# constantes\n",
     "TAMANHO_POP = 6\n",
-    "NUM_GENES = 4\n",
     "NUM_GERACOES = 1000\n",
     "CHANCE_CRUZAMENTO = 0.5\n",
     "CHANCE_MUTADO = 0.05\n",
@@ -121,10 +113,10 @@
      "text": [
       "\n",
       "População inicial:\n",
-      "[[22, 37, 67, 86], [56, 57, 84, 97], [48, 77, 52, 13], [55, 19, 76, 2], [26, 35, 56, 90], [24, 48, 82, 40]]\n",
+      "[[27, 69, 51, 60], [42, 71, 23, 79], [85, 22, 21, 41], [86, 61, 50, 80], [15, 54, 20, 83], [65, 16, 86, 87]]\n",
       "\n",
       "População final:\n",
-      "[[85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79], [85, 84, 100, 79]]\n"
+      "[[40, 100, 35, 88], [37, 100, 83, 88], [40, 100, 35, 88], [37, 100, 83, 88], [37, 100, 83, 88], [57, 88, 46, 21]]\n"
      ]
     }
    ],
@@ -149,6 +141,7 @@
     "            filho1, filho2 = funcao_cruzamento(pai,mae)\n",
     "            populacao[contador] = filho1\n",
     "            populacao[contador+1] = filho2\n",
+    "            \n",
     "        contador = contador+2\n",
     "\n",
     "    for n in range(len(populacao)):\n",
@@ -169,7 +162,13 @@
    "metadata": {},
    "source": [
     "## Conclusão\n",
-    "\n"
+    "Usamos o algoritmo genético para resolver o problema das caixas não binárias, ou seja, agora os genes podem ser diferentes de 0 ou 1. Escolhemos o range de 0 e 100 para cada gene.  \n",
+    "\n",
+    "Para poder usar as mesmas funções, estamos salvando todas elas em um arquivo .py que podem ser chamados depois. Outra estratégia que estamos usando é a de criar funções locais para poder adicionar variáveis as funções anteriores que já estão compondo nosso algoritmo genético, dessa maneira não precisamos mudá-las todas as vezes que uma função objetivo fica mais complexa, por exemplo.  \n",
+    "\n",
+    "Usamos 4 genes, ou caixas, para compor um indivíduo, ainda tivemos que escolher o número de gerações, chance de cruzamento, chance de mutação, apenas adicionamos o valor máximo de cada caixa, agora era 100. \n",
+    "\n",
+    "Nosso resultado ainda é probabilístico, tendo em vista que sabemos o valor máximo de fitness e ele não aparece (400, caso todos os genes fossem iguais a 100) além de que cada vez que rodamos o código um valor diferente aparecia para os indivíduos."
    ]
   },
   {
