--- a/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
+++ b/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -125,67 +125,62 @@
      "output_type": "stream",
      "text": [
       "Progresso da melhor senha já vista:\n",
-      "itqujrmonssfboslxayhkmlkf - fitness: 149\n",
-      "ikpvnsolfbwjdbpchwtjycwmf - fitness: 146\n",
-      "ipqujrmonssfboslxayhkmlkf - fitness: 145\n",
-      "ipqujrmonssfboslxwtjycwmf - fitness: 125\n",
-      "ipqujrmonssfboslxwyhkblkf - fitness: 122\n",
-      "ipqujrmonssfboslgwtjycwmf - fitness: 108\n",
-      "ipqujrmonssfboslfwtjycwmf - fitness: 107\n",
-      "ipqujrmdnssfboswgwtjycwmf - fitness: 100\n",
-      "ipqufrmdnssfboswgwtjycwmf - fitness: 96\n",
-      "ipqufhmdnssfboswgwtjycwmf - fitness: 86\n",
-      "ipqufhmdnssfboswgwtjwcwmf - fitness: 84\n",
-      "gpqufhmdnssfboswgwtjwcwmf - fitness: 82\n",
-      "apqufhmdnssfboswgwtjwcwmf - fitness: 80\n",
-      "apqufhxdnssfboswgwtjwcwmf - fitness: 77\n",
-      "apqufhxdnssfboswgotjwcwmf - fitness: 75\n",
-      "apqufhxdnssfboswgwtjwclmf - fitness: 74\n",
-      "apqufhxdnssfbmswgwtjwclmf - fitness: 72\n",
-      "apqufhxdnssfbmswgwtvwcwmf - fitness: 69\n",
-      "apqufhxdnssfbmswgwtvwclmf - fitness: 66\n",
-      "apqpfhxdnssfbmswgwtvwclmf - fitness: 65\n",
-      "cpqpfhxdnssfbmswgwtvwclmf - fitness: 63\n",
-      "cpqufhxdnssfbmstgwtvwclmf - fitness: 61\n",
-      "cpqpfhxdnssfbmstgwtvwclmf - fitness: 60\n",
-      "cpqpfhxdnssfbistgwtvwclmf - fitness: 56\n",
-      "cpqpfhxdnssfbistgwtvwcsmf - fitness: 55\n",
-      "cpqpfhxdnrsfbistgwtvwcsmf - fitness: 54\n",
-      "cpqpfhxfnssfbistgwtvwcsmf - fitness: 53\n",
-      "cpqpfhxfnrsfbistgwtvwcsmf - fitness: 52\n",
-      "cpqpfhxfnrsfbistgwtvwcslf - fitness: 51\n",
-      "cpqpfhrfnrsfbistgwtvwcslf - fitness: 49\n",
-      "cpqpfhrfnrsfbistgotvwcslf - fitness: 47\n",
-      "cpqpfevfnrsfbistgwtvwcslf - fitness: 46\n",
-      "cpqpfevfnrsfbistgotvwcslf - fitness: 44\n",
-      "cpqpfevfnrsfbistgotvtcslf - fitness: 41\n",
-      "cpqpfevfnrsebistgotvtcslf - fitness: 40\n",
-      "cpqpfevfnrsfbistgozvtcslf - fitness: 37\n",
-      "cpqpfevfnrsfbistgozvtcqlf - fitness: 35\n",
-      "coqpfevfnrsfbistgozvtcqlf - fitness: 34\n",
-      "coqpfevfnrsfbistgoyvtcqlf - fitness: 33\n",
-      "coqpfevfnrsfbistgoyutcqlf - fitness: 32\n",
-      "coqpfevfnrsfbistdoyutcqlf - fitness: 31\n",
-      "coqpfevfnrsfbhstdoyutcqlf - fitness: 30\n",
-      "coqpfcvfnrsfbistdoyutcqlf - fitness: 29\n",
-      "coqpfcvfnrsfbistdsyutcqlf - fitness: 27\n",
-      "coqpfcvfnrsebistdsyutcqlf - fitness: 26\n",
-      "coqpfcvfnrsebcstdsyutcqlf - fitness: 20\n",
-      "coqpfctfnrsebcstdsyutcqlf - fitness: 18\n",
-      "coqqfctfnrsebcstdsyutcqlf - fitness: 17\n",
-      "coqqfcthnrsebcstdsyutcqlf - fitness: 15\n",
-      "coqqfcthnrsebcstesyutcqlf - fitness: 14\n",
-      "coqqfcthnrsebcstesyrtcqlf - fitness: 13\n",
-      "coqqfcthorsebcstesyttcqlf - fitness: 12\n",
-      "coqqfcthorsebcstesystcqlf - fitness: 11\n",
-      "coqqfcthorsebcstesystcqle - fitness: 10\n",
-      "coqsfcthorsebcstesystaqle - fitness: 8\n",
-      "coqsdcthorsebastesystaqle - fitness: 6\n",
-      "coqrecthorsebbstesystaqle - fitness: 5\n",
-      "coqrecthorsebastesystaqle - fitness: 4\n",
-      "coqrecthorsebasterystaqle - fitness: 3\n",
-      "coqrecthorsebatterystaqle - fitness: 2\n",
-      "coqrecthorsebatterystaple - fitness: 1\n",
+      "hkdractgcogntgpzsztpkbtfd - fitness: 149\n",
+      "awiyadsiizrjkcfybtdlijtpf - fitness: 145\n",
+      "awiyadsiizrjrjpqfnwtdhmdc - fitness: 129\n",
+      "awiyadsiizrjrjpqfntiobjkj - fitness: 123\n",
+      "hkdractgcorjkjpqfnwtdhmdc - fitness: 118\n",
+      "awiyadsiizrjkjpqfntiobjkj - fitness: 116\n",
+      "awiyadsiizrjkcpqfnwtdhmdc - fitness: 115\n",
+      "akdractgcorjkcpqfnwtdhmpf - fitness: 103\n",
+      "akdractgcorjkcpqfnwtlhmpf - fitness: 95\n",
+      "akdractgcorjkcpqfnwtkbmpf - fitness: 90\n",
+      "awtyadsiiurjkcpqfnwtkbmpf - fitness: 85\n",
+      "akdractgiurjkcpqfnwtkbmpf - fitness: 84\n",
+      "awtyactgiurjkcpqfnwtkbmpf - fitness: 83\n",
+      "awtyactgiurjkcpqfnwtlbmpf - fitness: 82\n",
+      "altyactgiurjkcpqfnwtkbmpf - fitness: 78\n",
+      "awtyactgiurjbcpqfnwtkbmpf - fitness: 74\n",
+      "altyactgiurjbcpqfnwtkbmpf - fitness: 69\n",
+      "altyactgturjbcpqfnwtkbmpf - fitness: 68\n",
+      "altyactgiurdbcpqfnwtkbmpf - fitness: 65\n",
+      "altyactgiurdbcpqfnxtkbmpf - fitness: 64\n",
+      "altyactgturdbcpqfnxtkbmpf - fitness: 63\n",
+      "altyactgourdbcpqfnxtkbmpf - fitness: 58\n",
+      "cltyfctgturdbcpqenxtkbmpf - fitness: 57\n",
+      "cltofctgturdbcpqenxtkbmpf - fitness: 53\n",
+      "cltofctgturdbcpqenxtkbmjf - fitness: 51\n",
+      "cltofctgturdbcpuenxtkbmjf - fitness: 49\n",
+      "cltofctgturdbctqenxtkbmjf - fitness: 47\n",
+      "cltofctgturdbcuuenxtkbmjf - fitness: 46\n",
+      "cltofctgturdbctuenxtkbmjf - fitness: 45\n",
+      "cltofctgturdbctuenxtlbmjf - fitness: 44\n",
+      "cltofctgturebctuenxtlbmjf - fitness: 43\n",
+      "cltofctgturebctuenxslbmjf - fitness: 42\n",
+      "cltofctgturebctuesxtlbmjf - fitness: 40\n",
+      "cltofctgturebctuenxssbmjf - fitness: 35\n",
+      "cltofctgturebctuesxssbmjf - fitness: 32\n",
+      "clrofctgturebctuesxssbmjf - fitness: 30\n",
+      "clrofctgturebatuesxssbmjf - fitness: 28\n",
+      "clrtfctgturebatuesxssbmjf - fitness: 27\n",
+      "clrtfctgturebatuesxstbmjf - fitness: 26\n",
+      "clrtfctgnurebatuesxstbmjf - fitness: 22\n",
+      "cprtfctgnurebatuesxstbmjf - fitness: 20\n",
+      "cprtfctgnurebattesxstbmjf - fitness: 19\n",
+      "cprtfctgnurebatterxstbmjf - fitness: 18\n",
+      "cprtfctgnurebatterxstbmmf - fitness: 17\n",
+      "cprtfctgnurebatterxstbqjf - fitness: 16\n",
+      "cprtfctgourebatterxstbmlf - fitness: 15\n",
+      "cprtfctgourebatterystbmlf - fitness: 14\n",
+      "cprtfctgourebatterystbmle - fitness: 13\n",
+      "cprtfctgourebatterystbple - fitness: 10\n",
+      "cprtfctgorrebatterystbple - fitness: 7\n",
+      "cprsfctgorrebatterystbple - fitness: 6\n",
+      "cprsfctgorrebatterystaple - fitness: 5\n",
+      "corsfctgorrebatterystaple - fitness: 4\n",
+      "corsfcthorrebatterystaple - fitness: 3\n",
+      "corsfcthorsebatterystaple - fitness: 2\n",
+      "corsecthorsebatterystaple - fitness: 1\n",
       "correcthorsebatterystaple - fitness: 0\n",
       "\n",
       "Melhor palpite da senha encontrado:\n",
@@ -209,8 +204,8 @@
     "    populacao = funcao_selecao(populacao, fitness)\n",
     "    \n",
     "    # Cruzamento\n",
-    "    pais = populacao[0::2]\n",
-    "    maes = populacao[1::2]\n",
+    "    pais = populacao[0::2] # os pais vão pares (em númros cardinais)\n",
+    "    maes = populacao[1::2] # as mães serão ímpares\n",
     "    \n",
     "    contador = 0\n",
     "    \n",
@@ -231,10 +226,12 @@
     "    # melhor individuo já visto até agora\n",
     "    fitness = funcao_objetivo_pop(populacao)\n",
     "    menor_fitness = min(fitness)\n",
+    "    \n",
     "    if menor_fitness < melhor_fitness_ja_visto:        \n",
     "        posicao = fitness.index(menor_fitness)\n",
     "        melhor_individuo_ja_visto = populacao[posicao]\n",
     "        melhor_fitness_ja_visto = menor_fitness\n",
+    "        \n",
     "        print(\"\".join(melhor_individuo_ja_visto), \"- fitness:\", melhor_fitness_ja_visto)\n",
     "\n",
     "print()\n",
@@ -254,7 +251,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a "
+    "Esse é um pro\n",
+    "\n",
+    "Assim resolvemos o problema que descobre as senhas em uma situação ótima, ou seja, sabemos a senha real, seu tamanho. Com essas informações, usamos o algoritmo genético para aproximar nossos chutes de senha aos valores reais da senha, calculando o fitness de minimização da distância das letras de ordem correspondente."
    ]
   },
   {
