--- a/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
+++ b/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
@@ -125,61 +125,57 @@
      "output_type": "stream",
      "text": [
       "Progresso da melhor senha já vista:\n",
-      "hkdractgcogntgpzsztpkbtfd - fitness: 149\n",
-      "awiyadsiizrjkcfybtdlijtpf - fitness: 145\n",
-      "awiyadsiizrjrjpqfnwtdhmdc - fitness: 129\n",
-      "awiyadsiizrjrjpqfntiobjkj - fitness: 123\n",
-      "hkdractgcorjkjpqfnwtdhmdc - fitness: 118\n",
-      "awiyadsiizrjkjpqfntiobjkj - fitness: 116\n",
-      "awiyadsiizrjkcpqfnwtdhmdc - fitness: 115\n",
-      "akdractgcorjkcpqfnwtdhmpf - fitness: 103\n",
-      "akdractgcorjkcpqfnwtlhmpf - fitness: 95\n",
-      "akdractgcorjkcpqfnwtkbmpf - fitness: 90\n",
-      "awtyadsiiurjkcpqfnwtkbmpf - fitness: 85\n",
-      "akdractgiurjkcpqfnwtkbmpf - fitness: 84\n",
-      "awtyactgiurjkcpqfnwtkbmpf - fitness: 83\n",
-      "awtyactgiurjkcpqfnwtlbmpf - fitness: 82\n",
-      "altyactgiurjkcpqfnwtkbmpf - fitness: 78\n",
-      "awtyactgiurjbcpqfnwtkbmpf - fitness: 74\n",
-      "altyactgiurjbcpqfnwtkbmpf - fitness: 69\n",
-      "altyactgturjbcpqfnwtkbmpf - fitness: 68\n",
-      "altyactgiurdbcpqfnwtkbmpf - fitness: 65\n",
-      "altyactgiurdbcpqfnxtkbmpf - fitness: 64\n",
-      "altyactgturdbcpqfnxtkbmpf - fitness: 63\n",
-      "altyactgourdbcpqfnxtkbmpf - fitness: 58\n",
-      "cltyfctgturdbcpqenxtkbmpf - fitness: 57\n",
-      "cltofctgturdbcpqenxtkbmpf - fitness: 53\n",
-      "cltofctgturdbcpqenxtkbmjf - fitness: 51\n",
-      "cltofctgturdbcpuenxtkbmjf - fitness: 49\n",
-      "cltofctgturdbctqenxtkbmjf - fitness: 47\n",
-      "cltofctgturdbcuuenxtkbmjf - fitness: 46\n",
-      "cltofctgturdbctuenxtkbmjf - fitness: 45\n",
-      "cltofctgturdbctuenxtlbmjf - fitness: 44\n",
-      "cltofctgturebctuenxtlbmjf - fitness: 43\n",
-      "cltofctgturebctuenxslbmjf - fitness: 42\n",
-      "cltofctgturebctuesxtlbmjf - fitness: 40\n",
-      "cltofctgturebctuenxssbmjf - fitness: 35\n",
-      "cltofctgturebctuesxssbmjf - fitness: 32\n",
-      "clrofctgturebctuesxssbmjf - fitness: 30\n",
-      "clrofctgturebatuesxssbmjf - fitness: 28\n",
-      "clrtfctgturebatuesxssbmjf - fitness: 27\n",
-      "clrtfctgturebatuesxstbmjf - fitness: 26\n",
-      "clrtfctgnurebatuesxstbmjf - fitness: 22\n",
-      "cprtfctgnurebatuesxstbmjf - fitness: 20\n",
-      "cprtfctgnurebattesxstbmjf - fitness: 19\n",
-      "cprtfctgnurebatterxstbmjf - fitness: 18\n",
-      "cprtfctgnurebatterxstbmmf - fitness: 17\n",
-      "cprtfctgnurebatterxstbqjf - fitness: 16\n",
-      "cprtfctgourebatterxstbmlf - fitness: 15\n",
-      "cprtfctgourebatterystbmlf - fitness: 14\n",
-      "cprtfctgourebatterystbmle - fitness: 13\n",
-      "cprtfctgourebatterystbple - fitness: 10\n",
-      "cprtfctgorrebatterystbple - fitness: 7\n",
-      "cprsfctgorrebatterystbple - fitness: 6\n",
-      "cprsfctgorrebatterystaple - fitness: 5\n",
-      "corsfctgorrebatterystaple - fitness: 4\n",
-      "corsfcthorrebatterystaple - fitness: 3\n",
-      "corsfcthorsebatterystaple - fitness: 2\n",
+      "fmssfdurlrcokqlsgoujggmqe - fitness: 128\n",
+      "dqssfdurlrcokqlsgoujggmqe - fitness: 126\n",
+      "hwssfdurqmtlanityrrpogmqe - fitness: 117\n",
+      "dqssfdqlqjtlanityrrpogmqe - fitness: 106\n",
+      "dqssfdurlrtlanitgoujggmqe - fitness: 99\n",
+      "dqssfdurlrtlanitgoujogmqe - fitness: 91\n",
+      "dqssfdurlrtlanitgorpogmqe - fitness: 88\n",
+      "dqssfdumlrtlanitgorpogmqe - fitness: 83\n",
+      "dqssfdumlrtlaniteorpogmqe - fitness: 81\n",
+      "dqssfdumlrtlaniteorptgmqe - fitness: 76\n",
+      "dqssfduglrtkaniteortognqe - fitness: 73\n",
+      "dqssfduglrtkaniteortocnqe - fitness: 69\n",
+      "dqssfduglrtaaniteortognje - fitness: 68\n",
+      "dqssfduglrtaaniteortocnqe - fitness: 67\n",
+      "dqssfcuglrtaaniteortocnqe - fitness: 66\n",
+      "dqssfcuglrtaaniteortpcnqe - fitness: 65\n",
+      "dqssfcuglrtaaniteostpcnqe - fitness: 64\n",
+      "dqssfduglrtaabiteortocnqe - fitness: 55\n",
+      "dqssfduglrtaabiteostpcnqe - fitness: 53\n",
+      "dqssfcuglrtaabiteostpcnqe - fitness: 52\n",
+      "dpssfcuglrtaabiteostpcnqe - fitness: 51\n",
+      "dpssfcuglrtaabiteostpcqqe - fitness: 50\n",
+      "dpssfcuglrtaaboteostpcnqe - fitness: 45\n",
+      "dpssfcuglrtaaboteostpcqqe - fitness: 44\n",
+      "dpssfcuglrtaaboterstpcnqe - fitness: 42\n",
+      "dpssfcuglrtaaboteostpcqje - fitness: 41\n",
+      "dpssfcuglrtaaboterstrcqqe - fitness: 39\n",
+      "dpssfcuglrtaaboterstucqqe - fitness: 38\n",
+      "dpssfcugnrtaaboterstucqqe - fitness: 36\n",
+      "dpssfcugnrtaabsterstucqqe - fitness: 32\n",
+      "dpssfcugnrtfabsterstucqqe - fitness: 29\n",
+      "dpssfcugnrtfabsterstucqoe - fitness: 27\n",
+      "dpssfcugnrtfabsterxtucqoe - fitness: 22\n",
+      "dpssfcugnrtfabsterxtucqle - fitness: 19\n",
+      "dpssfcugnrtfbbsterxtucqle - fitness: 18\n",
+      "dpssfcugnrtfbbtterxtucqle - fitness: 17\n",
+      "dpssfcugnrtfbbtterytucqle - fitness: 16\n",
+      "dpssfctgnrtfbbtterytucqle - fitness: 15\n",
+      "dpssfctgnrtfbbtterysucqle - fitness: 14\n",
+      "dpssfcthnrtfbbtterysucqle - fitness: 13\n",
+      "dpssfcthnrtfbbtterysubqle - fitness: 12\n",
+      "dpssfcthnrtfbbtterysuaqle - fitness: 11\n",
+      "dpssfcthnrtfbbtterysuaple - fitness: 10\n",
+      "dpssecthnrtfbbtterysuaple - fitness: 9\n",
+      "dpssecthortfbbtterysuaple - fitness: 8\n",
+      "dprsecthortfbbtterysuaple - fitness: 7\n",
+      "dprsecthortfbatterysuaple - fitness: 6\n",
+      "dprsecthortebatterysuaple - fitness: 5\n",
+      "dorsecthortebatterysuaple - fitness: 4\n",
+      "dorsecthortebatterystaple - fitness: 3\n",
+      "dorsecthorsebatterystaple - fitness: 2\n",
       "corsecthorsebatterystaple - fitness: 1\n",
       "correcthorsebatterystaple - fitness: 0\n",
       "\n",
@@ -251,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esse é um pro\n",
+    "Desta vez mudamos o problema, agora queremos descobrir uma senha a qual nossa função objetivo conhece. Para resolver esse problema usamos seguinte abordagem: definimos os caracteres que podem estar contidos na senha desejada, nossos indivíduos agora são possíveis senhas cujos genes são letras, transformamos as letras em números, calculamos a distância da senha inferida a senha original (nosso novo fitness). \n",
     "\n",
     "Assim resolvemos o problema que descobre as senhas em uma situação ótima, ou seja, sabemos a senha real, seu tamanho. Com essas informações, usamos o algoritmo genético para aproximar nossos chutes de senha aos valores reais da senha, calculando o fitness de minimização da distância das letras de ordem correspondente."
    ]
