--- a/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
+++ b/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Experimento GA.01 - senha de tamanho variavel\n",
+    "experimento GA.01 - senha de tamanho variavel\n",
     "========================================\n",
     "\n"
    ]
@@ -37,9 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resolver o problema da senha sem fornecer a informação do tamanho da senha para a função que gera a população.\n",
+    "**Objetivo**: Resolver o problema da senha sem fornecer a informação do tamanho da senha para a função que gera a população.\n",
     "\n",
-    "**Dica**: A função objetivo terá que quantificar em sua métrica tanto se o candidato acertou as letras quanto se acertou o tamanho da senha.\n"
+    "**Dica**: A função objetivo terá que quantificar em sua métrica tanto se o candidato acertou as letras quanto se acertou o tamanho da senha."
    ]
   },
   {
@@ -64,11 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from funcoes import populacao_inicial_senha\n",
-    "from funcoes import funcao_objetivo_pop_senha\n",
+    "from funcoes import populacao_inicial_senha_variavel\n",
+    "from funcoes import funcao_objetivo_pop_senha_variavel\n",
     "from funcoes import selecao_torneio_min\n",
-    "from funcoes import cruzamento_ponto_simples as funcao_cruzamento\n",
-    "from funcoes import mutacao_senha\n",
+    "from funcoes import cruzamento_ponto_senha_variavel as funcao_cruzamento\n",
+    "from funcoes import mutacao_senha_variavel\n",
     "from funcoes import gene_letra\n",
     "import random"
    ]
@@ -88,7 +88,23 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### CONSTANTES\n",
+    "\n",
+    "# relacionadas à busca\n",
+    "TAMANHO_POP = 10\n",
+    "NUM_GERACOES = 2000\n",
+    "CHANCE_CRUZAMENTO = 0.5\n",
+    "CHANCE_MUTACAO = 0.05\n",
+    "NUM_COMBATENTES_NO_TORNEIO = 2\n",
+    "\n",
+    "# relacionadas ao problema a ser resulvido\n",
+    "MAXIMO = 100\n",
+    "PESO_PENALIDADE = 60\n",
+    "SENHA = \"isalindadms\" # o que estou tentando descobrir\n",
+    "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\" # todas letras que podem estar na minha senha\n",
+    "# NUM_GENES = len(SENHA)"
+   ]
   },
   {
    "cell_type": "code",
@@ -96,41 +112,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### CONSTANTES\n",
-    "\n",
-    "# relacionadas à busca\n",
-    "TAMANHO_POP = 50\n",
-    "NUM_GERACOES = 2000\n",
-    "CHANCE_CRUZAMENTO = 0.5\n",
-    "CHANCE_MUTACAO = 0.05\n",
-    "NUM_COMBATENTES_NO_TORNEIO = 3\n",
-    "\n",
-    "# relacionadas ao problema a ser resulvido\n",
-    "## limitar a senha para 4 digitos\n",
-    "SENHA = \"core\" # o que estou tentando descobrir\n",
-    "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\" # todas letras que podem estar na minha senha\n",
-    "# NUM_GENES = len(SENHA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# funções locais\n",
     "\n",
     "def cria_populacao_inicial(tamanho, tamanho_senha):\n",
-    "    return populacao_inicial_senha_tv(tamanho, LETRAS_POSSIVEIS, SENHA)\n",
+    "    return populacao_inicial_senha_variavel(TAMANHO_POP, MAXIMO, LETRAS_POSSIVEIS) #usa um tamanho máximo chute \n",
     "\n",
     "def funcao_objetivo_pop(populacao):\n",
-    "    return funcao_objetivo_pop_senha_tv(populacao, SENHA)\n",
+    "    return funcao_objetivo_pop_senha_variavel(populacao, SENHA , PESO_PENALIDADE)\n",
     "\n",
     "def funcao_selecao(populacao, fitness):\n",
     "    return selecao_torneio_min(populacao, fitness, NUM_COMBATENTES_NO_TORNEIO)\n",
     "\n",
     "def funcao_mutacao(individuo):\n",
-    "    return mutacao_senha(individuo, LETRAS_POSSIVEIS)"
+    "    return mutacao_senha_variavel(individuo, LETRAS_POSSIVEIS, MAXIMO)"
    ]
   },
   {
@@ -139,23 +133,46 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progresso da melhor senha já vista:\n",
+      "quebudgnq - fitness: 195\n",
+      "tmoaspvltfx - fitness: 111\n",
+      "qfelnfikhho - fitness: 66\n",
+      "tmomokahhko - fitness: 61\n",
+      "tmomomahhko - fitness: 59\n",
+      "imomahhhkkt - fitness: 56\n",
+      "imhhmhhkkko - fitness: 54\n",
+      "imomhkkkkku - fitness: 53\n",
+      "imhmmmhkkko - fitness: 46\n",
+      "ihiohmnberq - fitness: 43\n",
+      "qmaemiiaems - fitness: 36\n",
+      "mqbqbqbbdmi - fitness: 35\n",
+      "irmmimgcggv - fitness: 32\n",
+      "gufjfnffdfq - fitness: 30\n",
+      "ltdlhhdddlp - fitness: 21\n",
+      "imcmmmcccmt - fitness: 19\n",
+      "hrdjjrdadmy - fitness: 18\n"
+     ]
+    },
+    {
      "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_28312/842352717.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpopulacao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcria_populacao_inicial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mTAMANHO_POP\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLETRAS_POSSIVEIS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mmelhor_fitness_ja_visto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"inf\"\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# é assim que escrevemos infinito em python\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                         \u001b[1;31m# assim, o primeiro indivíduo já substituirá,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                         \u001b[1;31m# pois vai ser melhor que infinito\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_28312/1158668917.py\u001b[0m in \u001b[0;36mcria_populacao_inicial\u001b[1;34m(tamanho, tamanho_senha)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcria_populacao_inicial\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtamanho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtamanho_senha\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mpopulacao_inicial_senha_tv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtamanho\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLETRAS_POSSIVEIS\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSENHA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncao_objetivo_pop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_28312/783998451.py\u001b[0m in \u001b[0;36mpopulacao_inicial_senha_tv\u001b[1;34m(tamanho, letras, senha_verdadeira)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[0mpopulacao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtamanho\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m         \u001b[0mpopulacao\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindividuo_senha_tv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletras\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msenha_verdadeira\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpopulacao\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_28312/783998451.py\u001b[0m in \u001b[0;36mindividuo_senha_tv\u001b[1;34m(letras, senha_verdadeira)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[0mvalor_candidato\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mvalor_senha_verdadeira\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mcandidato\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgene_letra\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletras\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcandidato\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\JupyterLab\\redes-neurais\\AlgoritmosGeneticos\\funcoes.py\u001b[0m in \u001b[0;36mgene_letra\u001b[1;34m(letras)\u001b[0m\n\u001b[0;32m     38\u001b[0m       \u001b[0mRetorna\u001b[0m \u001b[0muma\u001b[0m \u001b[0mletra\u001b[0m \u001b[0mdentro\u001b[0m \u001b[0mdas\u001b[0m \u001b[0mpossíveis\u001b[0m \u001b[0mde\u001b[0m \u001b[0mserem\u001b[0m \u001b[0msorteadas\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m     \"\"\"\n\u001b[1;32m---> 40\u001b[1;33m     \u001b[0mletra\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mletras\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mletra\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_12092/885172975.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m# Seleção\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mfitness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfuncao_objetivo_pop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mpopulacao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfuncao_selecao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m# Cruzamento\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_12092/141171833.py\u001b[0m in \u001b[0;36mfuncao_selecao\u001b[1;34m(populacao, fitness)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncao_selecao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mselecao_torneio_min\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNUM_COMBATENTES_NO_TORNEIO\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncao_mutacao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindividuo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\JupyterLab\\redes-neurais\\AlgoritmosGeneticos\\funcoes.py\u001b[0m in \u001b[0;36mselecao_torneio_min\u001b[1;34m(populacao, fitness, tamanho_torneio)\u001b[0m\n\u001b[0;32m    222\u001b[0m     \u001b[1;31m# vamos fazer len(populacao) torneios! Que comecem os jogos!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 224\u001b[1;33m         \u001b[0mcombatentes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpar_populacao_fitness\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtamanho_torneio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    225\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    226\u001b[0m         \u001b[1;31m# é assim que se escreve infinito em python\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Program Files\\Python39\\lib\\random.py\u001b[0m in \u001b[0;36msample\u001b[1;34m(self, population, k, counts)\u001b[0m\n\u001b[0;32m    458\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m                 \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandbelow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 460\u001b[1;33m                 \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    461\u001b[0m                 \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# move non-selected item into vacancy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    462\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "populacao = cria_populacao_inicial(TAMANHO_POP, LETRAS_POSSIVEIS)\n",
+    "populacao = populacao_inicial_senha_variavel(TAMANHO_POP, MAXIMO, LETRAS_POSSIVEIS)\n",
     "\n",
     "melhor_fitness_ja_visto = float(\"inf\")  # é assim que escrevemos infinito em python\n",
     "                        # assim, o primeiro indivíduo já substituirá, \n",
@@ -170,8 +187,8 @@
     "    populacao = funcao_selecao(populacao, fitness)\n",
     "    \n",
     "    # Cruzamento\n",
-    "    pais = populacao[0::2]\n",
-    "    maes = populacao[1::2]\n",
+    "    pais = populacao[0::2] # os pais vão pares (em númros cardinais)\n",
+    "    maes = populacao[1::2] # as mães serão ímpares\n",
     "    \n",
     "    contador = 0\n",
     "    \n",
@@ -192,23 +209,18 @@
     "    # melhor individuo já visto até agora\n",
     "    fitness = funcao_objetivo_pop(populacao)\n",
     "    menor_fitness = min(fitness)\n",
+    "    \n",
     "    if menor_fitness < melhor_fitness_ja_visto:        \n",
     "        posicao = fitness.index(menor_fitness)\n",
     "        melhor_individuo_ja_visto = populacao[posicao]\n",
     "        melhor_fitness_ja_visto = menor_fitness\n",
+    "        \n",
     "        print(\"\".join(melhor_individuo_ja_visto), \"- fitness:\", melhor_fitness_ja_visto)\n",
     "\n",
     "print()\n",
     "print(\"Melhor palpite da senha encontrado:\")\n",
     "print(\"\".join(melhor_individuo_ja_visto))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
