--- a/AlgoritmosGeneticos/experimento A.06 - o caixeiro viajante.ipynb
+++ b/AlgoritmosGeneticos/experimento A.06 - o caixeiro viajante.ipynb
@@ -102,10 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "from itertools import permutations\n",
+    "\n",
+    "from funcoes import cria_cidades\n",
+    "\n",
+    "from funcoes import populacao_inicial_cv as cria_populacao_inicial\n",
+    "from funcoes import funcao_objetivo_pop_cv\n",
+    "from funcoes import funcao_objetivo_cv\n",
+    "from funcoes import selecao_torneio_min as funcao_selecao # esse já temos!\n",
+    "from funcoes import cruzamento_ordenado as funcao_cruzamento\n",
+    "from funcoes import mutacao_de_troca as funcao_mutacao"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,10 +129,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### CONSTANTES\n",
+    "\n",
+    "# relacionadas à busca\n",
+    "TAMANHO_POP = 50\n",
+    "NUM_GERACOES = 1000\n",
+    "CHANCE_CRUZAMENTO = 0.5\n",
+    "CHANCE_MUTACAO = 0.05\n",
+    "NUM_COMBATENTES_NO_TORNEIO = 3\n",
+    "\n",
+    "# relacionadas ao problema a ser resolvido\n",
+    "NUMERO_DE_CIDADES = 6\n",
+    "CIDADES = cria_cidades(NUMERO_DE_CIDADES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funções locais\n",
+    "def funcao_objetivo_pop(populacao):\n",
+    "    return funcao_objetivo_pop_cv(populacao, CIDADES)\n",
+    "\n",
+    "def funcao_objetivo_individuo(individuo):\n",
+    "    return funcao_objetivo_cv(individuo, CIDADES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Busca por algoritmo genético\n",
+    "\n",
+    "populacao = cria_populacao_inicial(TAMANHO_POP, CIDADES)\n",
+    "\n",
+    "melhor_fitness_ja_visto = float(\"inf\")  # é assim que escrevemos infinito em python\n",
+    "\n",
+    "for n in range(NUM_GERACOES):\n",
+    "    \n",
+    "    # Seleção\n",
+    "    fitness = funcao_objetivo_pop(populacao)\n",
+    "    populacao = funcao_selecao(populacao, fitness)\n",
+    "    \n",
+    "    # Cruzamento\n",
+    "    pais = populacao[0::2]\n",
+    "    maes = populacao[1::2]\n",
+    "    \n",
+    "    contador = 0\n",
+    "    \n",
+    "    for pai, mae in zip(pais, maes):\n",
+    "        if random.random() <= CHANCE_CRUZAMENTO:\n",
+    "            filho1, filho2 = funcao_cruzamento(pai, mae)\n",
+    "            populacao[contador] = filho1\n",
+    "            populacao[contador + 1] = filho2\n",
+    "        \n",
+    "        contador = contador + 2   \n",
+    "        \n",
+    "    # Mutação\n",
+    "    for n in range(len(populacao)):\n",
+    "        if random.random() <= CHANCE_MUTACAO:\n",
+    "            individuo = populacao[n]\n",
+    "            populacao[n] = funcao_mutacao(individuo)            \n",
+    "            \n",
+    "    # melhor individuo já visto até agora\n",
+    "    fitness = funcao_objetivo_pop(populacao)\n",
+    "    menor_fitness = min(fitness)\n",
+    "    if menor_fitness < melhor_fitness_ja_visto:        \n",
+    "        posicao = fitness.index(menor_fitness)\n",
+    "        melhor_individuo_ja_visto = populacao[posicao]\n",
+    "        melhor_fitness_ja_visto = menor_fitness    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Busca testando todas as permutações\n",
+    "\n",
+    "melhor_fitness_ever = float(\"inf\")\n",
+    "\n",
+    "# testando todas as permutações possíveis\n",
+    "for caminho in permutations(list(CIDADES.keys())):\n",
+    "    distancia = funcao_objetivo_individuo(caminho)\n",
+    "    if distancia < melhor_fitness_ever:\n",
+    "        melhor_fitness_ever = distancia\n",
+    "        melhor_resposta_ever = caminho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Melhor individuo obtido por algoritmos genéticos:\n",
+      "['Cidade 4', 'Cidade 2', 'Cidade 3', 'Cidade 0', 'Cidade 1', 'Cidade 5'] com distância: 1.648179465264458\n",
+      "\n",
+      "Melhor individuo obtido por busca exaustiva:\n",
+      "('Cidade 0', 'Cidade 5', 'Cidade 2', 'Cidade 4', 'Cidade 3', 'Cidade 1') com distância: 1.648179465264458\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checando os resultados\n",
+    "\n",
+    "print()\n",
+    "print(\"Melhor individuo obtido por algoritmos genéticos:\")\n",
+    "print(melhor_individuo_ja_visto, \"com distância:\", melhor_fitness_ja_visto)\n",
+    "\n",
+    "print()\n",
+    "print(\"Melhor individuo obtido por busca exaustiva:\")\n",
+    "print(melhor_resposta_ever, \"com distância:\", melhor_fitness_ever)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,8 +268,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Este é um problema do tipo np - não polinomial, como muitas incógnitas dentro da ciência. Diferente dos exercícios anteriores, não sabemos a melhor resposta, tivemos que testar todas as possibilidades/combinações, portanto o critério de parada deixa de ser o melhor fitness e volta a ser o número de gerações. \n",
+    "\n",
+    "O cruzamento de ponto simples não resolvia, uma vez que as próximas gerações poderiam repetir as mesmas cidades, o que não resolveria nosso problema, portanto usamos o cruzamento ordenado. Esse cruzamento consiste em usar dois pontos de corte, pegamos os genes de dentro dos cortes de um dos progenitores, então verificamos desde o primeiro gene do segundo progenitor e adicionamos aqueles que ainda não estão no filho. Fazemos isso duas vezes, para cada um dos filhos. \n",
+    "\n",
+    "A mutação que usamos dessa vez foi a mutação de troca, que pega um gene do índice aleatório e troca por um outro gene que também pertence ao individuo, ela funciona pois não queremos adicionar informação nova, como nos outros exercícios, mas sim, mudar a ordem das informações que já temos.  \n",
+    "\n",
+    "Agora para calcular a função objetivo do indivíduo não importa exatamente quem inicia (qual cidade será nosso ponto de partida), basta que esteja na mesma ordem e o resultado será o mesmo. Portanto devemos calcular a soma das distâncias entre os genes/cidades, ou seja, distâncias entre os pontos cartesianos, mais conhecido como norma. A menor soma das normas é nosso melhor resultado, portanto o esperado. \n",
+    "\n",
+    "Testamos dois tipos de busca, por algoritmo genéticos e busca exaustiva que testa todas as permutações possíveis, ou seja, testa todas as opções de cidades possíveis. A busca por algoritmos genéticos é probabilística, portanto, pode nos retornar ordens diferentes para cada vez que rodamos o código. Contudo possui um resultado bastante razoável, com distâncias iguais. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Playground\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cidade 1', 'Cidade 0', 'Cidade 2', 'Cidade 4', 'Cidade 3']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cidades = cria_cidades(5)\n",
+    "cidades\n",
+    "nomes = list(cidades.keys())\n",
+    "nomes\n",
+    "random.shuffle(nomes) #embaralhamento dos nomes\n",
+    "nomes"
    ]
   },
   {
@@ -162,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
