--- a/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
+++ b/AlgoritmosGeneticos/experimento GA.01 - senha de tamanho variavel.ipynb
@@ -68,7 +68,8 @@
     "from funcoes import funcao_objetivo_pop_senha_variavel\n",
     "from funcoes import selecao_torneio_min\n",
     "from funcoes import cruzamento_ponto_senha_variavel as funcao_cruzamento\n",
-    "from funcoes import mutacao_senha_variavel\n",
+    "from funcoes import mutacao_senha_variavel_tamanho\n",
+    "from funcoes import mutacao_senha\n",
     "from funcoes import gene_letra\n",
     "import random"
    ]
@@ -93,15 +94,15 @@
     "\n",
     "# relacionadas à busca\n",
     "TAMANHO_POP = 10\n",
-    "NUM_GERACOES = 2000\n",
+    "NUM_GERACOES = 1000\n",
     "CHANCE_CRUZAMENTO = 0.5\n",
-    "CHANCE_MUTACAO = 0.05\n",
+    "CHANCE_MUTACAO = 0.5\n",
     "NUM_COMBATENTES_NO_TORNEIO = 2\n",
     "\n",
     "# relacionadas ao problema a ser resulvido\n",
     "MAXIMO = 100\n",
     "PESO_PENALIDADE = 60\n",
-    "SENHA = \"isalindadms\" # o que estou tentando descobrir\n",
+    "SENHA = \"isalindadmsgatona\" # o que estou tentando descobrir\n",
     "LETRAS_POSSIVEIS = \"abcdefghijklmnopqrstuvwxyz\" # todas letras que podem estar na minha senha\n",
     "# NUM_GENES = len(SENHA)"
    ]
@@ -121,15 +122,18 @@
     "    return funcao_objetivo_pop_senha_variavel(populacao, SENHA , PESO_PENALIDADE)\n",
     "\n",
     "def funcao_selecao(populacao, fitness):\n",
-    "    return selecao_torneio_min(populacao, fitness, NUM_COMBATENTES_NO_TORNEIO)\n",
+    "    return selecao_torneio_min(populacao, fitness, tamanho_torneio=6)\n",
+    "\n",
+    "#def funcao_mutacao(individuo):\n",
+    "#    return mutacao_senha(individuo, LETRAS_POSSIVEIS)\n",
     "\n",
     "def funcao_mutacao(individuo):\n",
-    "    return mutacao_senha_variavel(individuo, LETRAS_POSSIVEIS, MAXIMO)"
+    "    return mutacao_senha_variavel_tamanho(individuo, LETRAS_POSSIVEIS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,37 +141,51 @@
      "output_type": "stream",
      "text": [
       "Progresso da melhor senha já vista:\n",
-      "quebudgnq - fitness: 195\n",
-      "tmoaspvltfx - fitness: 111\n",
-      "qfelnfikhho - fitness: 66\n",
-      "tmomokahhko - fitness: 61\n",
-      "tmomomahhko - fitness: 59\n",
-      "imomahhhkkt - fitness: 56\n",
-      "imhhmhhkkko - fitness: 54\n",
-      "imomhkkkkku - fitness: 53\n",
-      "imhmmmhkkko - fitness: 46\n",
-      "ihiohmnberq - fitness: 43\n",
-      "qmaemiiaems - fitness: 36\n",
-      "mqbqbqbbdmi - fitness: 35\n",
-      "irmmimgcggv - fitness: 32\n",
-      "gufjfnffdfq - fitness: 30\n",
-      "ltdlhhdddlp - fitness: 21\n",
-      "imcmmmcccmt - fitness: 19\n",
-      "hrdjjrdadmy - fitness: 18\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_12092/885172975.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;31m# Seleção\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mfitness\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfuncao_objetivo_pop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mpopulacao\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfuncao_selecao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[1;31m# Cruzamento\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\ISADOR~1\\AppData\\Local\\Temp/ipykernel_12092/141171833.py\u001b[0m in \u001b[0;36mfuncao_selecao\u001b[1;34m(populacao, fitness)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncao_selecao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mselecao_torneio_min\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfitness\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNUM_COMBATENTES_NO_TORNEIO\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mfuncao_mutacao\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindividuo\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\JupyterLab\\redes-neurais\\AlgoritmosGeneticos\\funcoes.py\u001b[0m in \u001b[0;36mselecao_torneio_min\u001b[1;34m(populacao, fitness, tamanho_torneio)\u001b[0m\n\u001b[0;32m    222\u001b[0m     \u001b[1;31m# vamos fazer len(populacao) torneios! Que comecem os jogos!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    223\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpopulacao\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 224\u001b[1;33m         \u001b[0mcombatentes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpar_populacao_fitness\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtamanho_torneio\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    225\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    226\u001b[0m         \u001b[1;31m# é assim que se escreve infinito em python\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\Python39\\lib\\random.py\u001b[0m in \u001b[0;36msample\u001b[1;34m(self, population, k, counts)\u001b[0m\n\u001b[0;32m    458\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    459\u001b[0m                 \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandbelow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 460\u001b[1;33m                 \u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    461\u001b[0m                 \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpool\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mi\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# move non-selected item into vacancy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    462\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "dwnjsskskhjtfljliy - fitness: 186\n",
+      "dwnjsskskhjkfljliy - fitness: 177\n",
+      "dwnjqskskhjkfljliy - fitness: 175\n",
+      "dwnjmskskhjkfljliy - fitness: 171\n",
+      "dwnjmskskhjkfljli - fitness: 111\n",
+      "dwnjjskskhskfljli - fitness: 99\n",
+      "dwnjjsknkhskfljli - fitness: 94\n",
+      "dwnjjsknkiskfljli - fitness: 93\n",
+      "dwijjsknkhskfljli - fitness: 89\n",
+      "dwijjsbnkhskfljli - fitness: 84\n",
+      "dwimjsbnkhskfljli - fitness: 83\n",
+      "dsimjsbnkhukfljli - fitness: 81\n",
+      "dsimjsbnkhukfrjli - fitness: 75\n",
+      "dsimjsbnkhukfrjld - fitness: 70\n",
+      "dsimjsbgkhukfrjld - fitness: 63\n",
+      "dsimjnbnkhukfrmld - fitness: 62\n",
+      "dsimjnbnkhukfsmld - fitness: 61\n",
+      "dsimjnbnkhujfsmld - fitness: 60\n",
+      "dsimjnbekhujfsmld - fitness: 51\n",
+      "jzgljngeenshfthrh - fitness: 48\n",
+      "jzgljngeenshfthoh - fitness: 45\n",
+      "jzgljngeenshfthnh - fitness: 44\n",
+      "jzgljneeenshfthnh - fitness: 42\n",
+      "jzgljneeenshfthnd - fitness: 38\n",
+      "jzaljneeenshfthnh - fitness: 36\n",
+      "jwaljneeensjfthnh - fitness: 35\n",
+      "jzaljneeenshfttnh - fitness: 34\n",
+      "jpaljneeenujftmnh - fitness: 31\n",
+      "jpaljneeensjftmnh - fitness: 29\n",
+      "jpaljneeensgftmnh - fitness: 26\n",
+      "jpaljneeensgftmnd - fitness: 22\n",
+      "jpaljneeensgftmna - fitness: 19\n",
+      "jpaljnedensgftmna - fitness: 18\n",
+      "jpaljnedemsgatmoa - fitness: 13\n",
+      "italindaemmgatnmb - fitness: 11\n",
+      "italingaemsgatnna - fitness: 6\n",
+      "isaljmeadmshatoma - fitness: 5\n",
+      "isaljndbdmshatoma - fitness: 4\n",
+      "isamindacmsgbtona - fitness: 3\n",
+      "jsalineadmsgatona - fitness: 2\n",
+      "isaliodadmsgatona - fitness: 1\n",
+      "isalindadmsgatona - fitness: 0\n",
+      "\n",
+      "Melhor palpite da senha encontrado:\n",
+      "isalindadmsgatona\n"
      ]
     }
    ],
@@ -197,15 +215,16 @@
     "            filho1, filho2 = funcao_cruzamento(pai, mae)\n",
     "            populacao[contador] = filho1\n",
     "            populacao[contador + 1] = filho2\n",
-    "        \n",
+    "            \n",
     "        contador = contador + 2   \n",
     "        \n",
     "    # Mutação\n",
     "    for n in range(len(populacao)):\n",
     "        if random.random() <= CHANCE_MUTACAO:\n",
     "            individuo = populacao[n]\n",
-    "            populacao[n] = funcao_mutacao(individuo)            \n",
+    "            populacao[n] = funcao_mutacao(individuo)\n",
     "            \n",
+    "\n",
     "    # melhor individuo já visto até agora\n",
     "    fitness = funcao_objetivo_pop(populacao)\n",
     "    menor_fitness = min(fitness)\n",
@@ -246,8 +265,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Delete este texto e escreva sua conclusão.\n",
-    "\n"
+    "Eu usei o mesmo escopo das funções para o código de descobrir senha, mudei que ao invés de chutar uma senha com o mesmo tamanho, eu defini um número máximo de letras que ele poderia chutar, então tive que criar uma função mutação que arrumava tanto o número de letras quanto quais letras eram.\n",
+    "Não precisei mudar nada no algoritmo genético pois escolhi fazer uma única função de mutação que fazia os dois ajustes ao mesmo tempo, porém se eu quisese duas funções de mutação eu teria que mudar o algoritmo.\n",
+    "Esse código é muito lento, demora muito para descobrir a senha e eu não consegui fazer com que ele descobrisse senhas muito grandes, testei com no máximo 17 letras, ainda sim tive que ajustar a função objetivo para atribuir uma distância quadrática quanto ao tamanho da senha, se não ele não diminuia."
    ]
   },
   {
@@ -288,9 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O caractere 'a' converte para o número 97\n",
+      "O caractere 'b' converte para o número 98\n",
+      "O caractere 'c' converte para o número 99\n",
+      "O caractere 'd' converte para o número 100\n",
+      "O caractere 'e' converte para o número 101\n",
+      "O caractere 'f' converte para o número 102\n",
+      "O caractere 'g' converte para o número 103\n",
+      "O caractere 'h' converte para o número 104\n",
+      "O caractere 'i' converte para o número 105\n",
+      "O caractere 'z' converte para o número 122\n"
+     ]
+    }
+   ],
    "source": [
     "caracteres = [\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\", \"i\", \"z\"]\n",
     "\n",
@@ -301,11 +338,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['s', 'a', 'b', 'c', 'd']\n"
+     ]
+    }
+   ],
    "source": [
-    "individuo_senha_tv(LETRAS_POSSIVEIS, SENHA)"
+    "individuo = ['a','b','c','d']\n",
+    "gene = random.randint(0, len(individuo) - 1)\n",
+    "individuo.insert(gene, gene_letra(LETRAS_POSSIVEIS))\n",
+    "print(individuo)"
    ]
   },
   {
