experimento GA.01 - senha de tamanho variavel

--- a/AlgoritmosGeneticos/1.ipynb
+++ b/AlgoritmosGeneticos/1.ipynb
@@ -1,16 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d12a45e-9d33-4a31-a657-e6e4689e879b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "75a13377-711c-4a96-9123-d3834d1885cd",
    "metadata": {},
    "source": [
     "experimento GA.01 - senha de tamanho variavel\n",
@@ -20,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af147241-51cc-4949-833d-146661739b9d",
    "metadata": {},
    "source": [
     "## Introdução\n",
@@ -29,7 +19,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389bb8d4-f757-468d-b26c-36d03a3404b3",
    "metadata": {},
    "source": [
     "Delete este texto e escreva uma breve introdução sobre seu experimento.\n",
@@ -38,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf7257b-9622-4f1e-90c4-023ef1b62509",
    "metadata": {},
    "source": [
     "## Objetivo\n",
@@ -47,7 +35,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c97f086-2e4b-4f31-9c51-3fe3f0cc3ae8",
    "metadata": {},
    "source": [
     "**Objetivo**: Resolver o problema da senha sem fornecer a informação do tamanho da senha para a função que gera a população.\n",
@@ -57,7 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb1f9f4-083d-4925-bc05-6260a85c14c1",
    "metadata": {},
    "source": [
     "## Importações\n",
@@ -66,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd5ca97-2ddb-43f5-9ab0-4bde1cf2b65f",
    "metadata": {},
    "source": [
     "Todos os comandos de `import` devem estar dentro desta seção.\n",
@@ -76,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9d77e3a0-b63f-4c48-a296-ab44f8f64663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +76,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213226af-30a2-4950-b5cd-f5ba2e209973",
    "metadata": {
     "tags": []
    },
@@ -104,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3b993c77-387b-42f4-ab4c-f66a89bba148",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d3116d56-34a4-4c49-9ec1-b61b51bf6ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "31fb3ff6-1dc4-46a9-b969-f209646358f5",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +243,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f472de-6416-46e3-af67-2e844a212968",
    "metadata": {},
    "source": [
     "-   Use células de código para o código.\n",
@@ -276,7 +255,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6120b660-965c-4948-94fc-b965637598b2",
    "metadata": {},
    "source": [
     "## Conclusão\n",
@@ -285,7 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee42f92-575e-42c0-ba23-2e441b7a06ab",
    "metadata": {},
    "source": [
     "Eu usei o mesmo escopo das funções para o código de descobrir senha, mudei que ao invés de chutar uma senha com o mesmo tamanho, eu defini um número máximo de letras que ele poderia chutar, então tive que criar uma função mutação que arrumava tanto o número de letras quanto quais letras eram.\n",
@@ -295,7 +272,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc118629-276f-4e52-b1bd-87f78c7c02fe",
    "metadata": {},
    "source": [
     "## Referências consultadas\n",
@@ -304,7 +280,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c50c026-637a-47d8-9146-af23e07009b9",
    "metadata": {},
    "source": [
     "1.  Delete este texto e inclua suas referências ordenadas numericamente. Se for referenciar no notebook, use o número entre colchetes (exemplo: para citar essa referência aqui escreva &ldquo;[1]&rdquo; sem as áspas).\n",
@@ -317,7 +292,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3831d49-7e5f-4439-b7ce-1e42b3e618b4",
    "metadata": {},
    "source": [
     "## Playground\n",
@@ -326,7 +300,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "298ca356-2e3e-4dd4-9c4c-13e01f3b6b26",
    "metadata": {},
    "source": [
     "Todo código de teste que não faz parte do seu experimento deve vir aqui. Este código não será considerado na avaliação.\n",
@@ -336,7 +309,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "96a09b2d-c47a-4392-a2e1-a0d7296a1d05",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6dbc555d-8f85-4d9a-a727-c3327c8d2f9f",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89d22210-d6ff-49d2-8bae-ae15097073d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -396,7 +366,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee1583b7-7ee6-4413-a62e-22b1990f79eb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -419,8 +388,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  }
+  },
+  "org": null
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
