--- a/AlgoritmosGeneticos/experimento A.06 - o caixeiro viajante.ipynb
+++ b/AlgoritmosGeneticos/experimento A.06 - o caixeiro viajante.ipynb
@@ -260,6 +260,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Discussão\n",
+    "\n",
+    "Este é um problema do tipo np - não polinomial, como muitas incógnitas dentro da ciência. Diferente dos exercícios anteriores, não sabemos a melhor resposta, tivemos que testar todas as possibilidades/combinações, portanto o critério de parada deixa de ser o melhor fitness e volta a ser o número de gerações. \n",
+    "\n",
+    "O cruzamento de ponto simples não resolvia, uma vez que as próximas gerações poderiam repetir as mesmas cidades, o que não resolveria nosso problema, portanto usamos o cruzamento ordenado. Esse cruzamento consiste em usar dois pontos de corte, pegamos os genes de dentro dos cortes de um dos progenitores, então verificamos desde o primeiro gene do segundo progenitor e adicionamos aqueles que ainda não estão no filho. Fazemos isso duas vezes, para cada um dos filhos. \n",
+    "\n",
+    "A mutação que usamos dessa vez foi a mutação de troca, que pega um gene do índice aleatório e troca por um outro gene que também pertence ao individuo, ela funciona pois não queremos adicionar informação nova, como nos outros exercícios, mas sim, mudar a ordem das informações que já temos.  \n",
+    "\n",
+    "Agora para calcular a função objetivo do indivíduo não importa exatamente quem inicia (qual cidade será nosso ponto de partida), basta que esteja na mesma ordem e o resultado será o mesmo. Portanto devemos calcular a soma das distâncias entre os genes/cidades, ou seja, distâncias entre os pontos cartesianos, mais conhecido como norma. A menor soma das normas é nosso melhor resultado, portanto o esperado. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusão\n",
     "\n"
    ]
@@ -268,13 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este é um problema do tipo np - não polinomial, como muitas incógnitas dentro da ciência. Diferente dos exercícios anteriores, não sabemos a melhor resposta, tivemos que testar todas as possibilidades/combinações, portanto o critério de parada deixa de ser o melhor fitness e volta a ser o número de gerações. \n",
-    "\n",
-    "O cruzamento de ponto simples não resolvia, uma vez que as próximas gerações poderiam repetir as mesmas cidades, o que não resolveria nosso problema, portanto usamos o cruzamento ordenado. Esse cruzamento consiste em usar dois pontos de corte, pegamos os genes de dentro dos cortes de um dos progenitores, então verificamos desde o primeiro gene do segundo progenitor e adicionamos aqueles que ainda não estão no filho. Fazemos isso duas vezes, para cada um dos filhos. \n",
-    "\n",
-    "A mutação que usamos dessa vez foi a mutação de troca, que pega um gene do índice aleatório e troca por um outro gene que também pertence ao individuo, ela funciona pois não queremos adicionar informação nova, como nos outros exercícios, mas sim, mudar a ordem das informações que já temos.  \n",
-    "\n",
-    "Agora para calcular a função objetivo do indivíduo não importa exatamente quem inicia (qual cidade será nosso ponto de partida), basta que esteja na mesma ordem e o resultado será o mesmo. Portanto devemos calcular a soma das distâncias entre os genes/cidades, ou seja, distâncias entre os pontos cartesianos, mais conhecido como norma. A menor soma das normas é nosso melhor resultado, portanto o esperado. \n",
+    "Esse é um problema de otimização do tipo NP, que envolve muitas incógnitas e requer a tentativa de todas as possibilidades/combinações. Nesse caso, o critério de parada é determinado pelo número de gerações, uma vez que não há uma melhor resposta conhecida. Para resolver o problema, utilizou-se o cruzamento ordenado em vez do cruzamento de ponto simples, que permitiria repetições de cidades nas gerações seguintes. A mutação de troca foi usada para mudar a ordem das informações que já existem. Para calcular a função objetivo, a soma das distâncias entre os genes/cidades foi utilizada, conhecida como norma, e a menor soma das normas é o resultado esperado.\n",
     "\n",
     "Testamos dois tipos de busca, por algoritmo genéticos e busca exaustiva que testa todas as permutações possíveis, ou seja, testa todas as opções de cidades possíveis. A busca por algoritmos genéticos é probabilística, portanto, pode nos retornar ordens diferentes para cada vez que rodamos o código. Contudo possui um resultado bastante razoável, com distâncias iguais. "
    ]
