--- a/AlgoritmosGeneticos/experimento A.07 - aplicando restricoes.ipynb
+++ b/AlgoritmosGeneticos/experimento A.07 - aplicando restricoes.ipynb
@@ -36,7 +36,7 @@
     "No entanto, apenas essa função não resolve o problema! Precisamos levar em consideração o limite de peso da mochila! Para isso, penalizamos a função objetivo levando em consideração essa restrição:\n",
     "\n",
     "$f=\\begin{cases}\n",
-    "0 & \\textrm{se peso > limite da mochila}\\\\\n",
+    "0.01 & \\textrm{se peso > limite da mochila}\\\\\n",
     "\\sum_{i,i\\in\\mathrm{mochila}}(\\mathrm{valor}(i)) & \\textrm{se peso} \\leq \\textrm{limite da mochila}\n",
     "\\end{cases}$\n",
     "\n",
@@ -104,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "from funcoes import computa_mochila\n",
+    "from funcoes import funcao_objetivo_pop_mochila\n",
+    "from funcoes import populacao_cb as cria_populacao_inicial\n",
+    "from funcoes import selecao_roleta_max as funcao_selecao\n",
+    "from funcoes import cruzamento_ponto_simples as funcao_cruzamento\n",
+    "from funcoes import mutacao_cb as funcao_mutacao"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,17 +128,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### CONSTANTES\n",
+    "\n",
+    "# relacionadas à busca\n",
+    "TAMANHO_POP = 20\n",
+    "NUM_GERACOES = 100\n",
+    "CHANCE_CRUZAMENTO = 0.5\n",
+    "CHANCE_MUTACAO = 0.05\n",
+    "\n",
+    "# relacionadas ao problema a ser resolvido\n",
+    "LIMITE_DE_PESO = 15\n",
+    "OBJETOS = {\n",
+    "    # dicionário baseado no que vocês enviaram na aula de Lógica\n",
+    "\n",
+    "    \"vinil falsificado da volta do One Direction\": {\n",
+    "        \"peso\": 2,\n",
+    "        \"valor\": 2500,\n",
+    "    },\n",
+    "    \"Harry Potter: ele voltou, confia!\": {\n",
+    "        \"peso\": 3,\n",
+    "        \"valor\": 1500,\n",
+    "    },\n",
+    "    \"Quadrinho super raro do Aranha-Homem da vida real\": {\n",
+    "        \"peso\": 3,\n",
+    "        \"valor\": 7000,\n",
+    "    },\n",
+    "    \"mesa dobrável para laptop\": {\n",
+    "        \"peso\": 3,\n",
+    "        \"valor\": 150,\n",
+    "    },\n",
+    "    \"tablet\": {\n",
+    "        \"peso\": 0.6,\n",
+    "        \"valor\": 2400,\n",
+    "    },\n",
+    "    \"teclado musical\": {\n",
+    "        \"peso\": 3.5,\n",
+    "        \"valor\": 3000,\n",
+    "    },\n",
+    "    \"bicicleta\": {\n",
+    "        \"peso\": 16,\n",
+    "        \"valor\": 1000,\n",
+    "    },\n",
+    "    \"lições em dia\": {\n",
+    "        \"peso\": 8,\n",
+    "        \"valor\": 5000,\n",
+    "    },\n",
+    "    \"energético\": {\n",
+    "        \"peso\": 2,\n",
+    "        \"valor\": 1500,\n",
+    "    },\n",
+    "    \"docinhos para o stress\": {\n",
+    "        \"peso\": 5,\n",
+    "        \"valor\": 3000,\n",
+    "    },\n",
+    "}\n",
+    "NUM_OBJETOS = len(OBJETOS)\n",
+    "ORDEM_DOS_NOMES = list(sorted(OBJETOS.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funções locais\n",
+    "\n",
+    "def funcao_objetivo_pop(populacao):\n",
+    "    return funcao_objetivo_pop_mochila(populacao, OBJETOS, LIMITE_DE_PESO, ORDEM_DOS_NOMES)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maior valor: 15400 | Peso: 12.1\n",
+      "Maior valor: 15500 | Peso: 13.5\n",
+      "Maior valor: 17900 | Peso: 14.1\n",
+      "\n",
+      "Você deve pegar os seguintes itens:\n",
+      "+ Harry Potter: ele voltou, confia!\n",
+      "+ Quadrinho super raro do Aranha-Homem da vida real\n",
+      "+ energético\n",
+      "+ tablet\n",
+      "+ teclado musical\n",
+      "+ vinil falsificado da volta do One Direction\n",
+      "\n",
+      "Com isso, sua mochila terá o valor de 17900 dinheiros e peso de 14.1 unidades de massa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Busca por algoritmo genético\n",
+    "\n",
+    "populacao = cria_populacao_inicial(TAMANHO_POP, NUM_OBJETOS)\n",
+    "\n",
+    "# variaveis para o hall da fama\n",
+    "melhor_fitness_ja_visto = -float(\"inf\")\n",
+    "melhor_individuo_ja_visto = [0] * NUM_OBJETOS\n",
+    "\n",
+    "for n in range(NUM_GERACOES):\n",
+    "\n",
+    "    # Seleção\n",
+    "    fitness = funcao_objetivo_pop(populacao)\n",
+    "    populacao = funcao_selecao(populacao, fitness)\n",
+    "\n",
+    "    # Cruzamento\n",
+    "    pais = populacao[0::2]\n",
+    "    maes = populacao[1::2]\n",
+    "\n",
+    "    contador = 0\n",
+    "\n",
+    "    for pai, mae in zip(pais, maes):\n",
+    "        if random.random() <= CHANCE_CRUZAMENTO:\n",
+    "            filho1, filho2 = funcao_cruzamento(pai, mae)\n",
+    "            populacao[contador] = filho1\n",
+    "            populacao[contador + 1] = filho2\n",
+    "\n",
+    "        contador = contador + 2\n",
+    "\n",
+    "    # Mutação\n",
+    "    for n in range(len(populacao)):\n",
+    "        if random.random() <= CHANCE_MUTACAO:\n",
+    "            individuo = populacao[n]\n",
+    "            populacao[n] = funcao_mutacao(individuo)\n",
+    "\n",
+    "    # melhor individuo já visto até agora (hall da fama)\n",
+    "    fitness = funcao_objetivo_pop(populacao)\n",
+    "    maior_fitness = max(fitness)\n",
+    "    posicao = fitness.index(maior_fitness)\n",
+    "    individuo = populacao[posicao].copy()\n",
+    "    valor, peso = computa_mochila(individuo, OBJETOS, ORDEM_DOS_NOMES)\n",
+    "    if maior_fitness > melhor_fitness_ja_visto and peso <= LIMITE_DE_PESO:\n",
+    "        melhor_fitness_ja_visto = maior_fitness\n",
+    "        melhor_individuo_ja_visto = individuo\n",
+    "        print(f\"Maior valor: {valor} | Peso: {peso}\")\n",
+    "\n",
+    "\n",
+    "# reportando o melhor individuo encontrado\n",
+    "print()\n",
+    "print(\"Você deve pegar os seguintes itens:\")\n",
+    "for pega_ou_nao, item in zip(melhor_individuo_ja_visto, ORDEM_DOS_NOMES):\n",
+    "    if pega_ou_nao == 1:\n",
+    "        print(\"+\", item)\n",
+    "print()\n",
+    "valor_total, peso_total = computa_mochila(\n",
+    "    melhor_individuo_ja_visto, OBJETOS, ORDEM_DOS_NOMES\n",
+    ")\n",
+    "print(\n",
+    "    f\"Com isso, sua mochila terá o valor de {valor_total} dinheiros \"\n",
+    "    f\"e peso de {peso_total} unidades de massa.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Desafio**: resolva o experimento considerando uma busca em grade para encontrar a melhor resposta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussão "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para abstrair o conceito imaterial de mochilas para programação vamos usar um dicionário, onde cada chave é um nome e cada um contem as informações de peso e valor. Nosso objetivo é maximizar o valor da soma dos valores dos objetos dentro da mochila e mantar o limite máximo de peso.\n",
+    "\n",
+    "O \"indivíduo\" desse problema vão ser compostos pelos itens da mochila, não necessáriamente os seus pesos e valores, portanto precisamos \"voltar\" as informações do que cada item contem. Vamos fazer uma lista de 0, e cada posição representa um item, sempre na mesma ordem, se o item existe na mochila então trocamos 0 por 1. Maximizamos o valor de cada mochila ao somar os valores dentro da lista de zeros e uns. Igual ao problema das caixas binárias.\n",
+    "\n",
+    "A função computa mochila recebe um indivíduo, objetos disponíveis e a ordem que eles estão dispostos, então resgatamos os valores e pesos usando o ordem que eles estão e a posição dessas informações (valor e peso), para então ser computado.\n",
+    "\n",
+    "Na função objetivo vamor usar um valor baixo como punição, assim diminui a chance de uma mochila com o peso maior que o limite de continuar nas próximas gerações.\n",
+    "A seleção vai pegar os indivíduos com o melhor fitness"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Conclusão\n",
-    "\n"
+    "\n",
+    "O problema da mochila envolve encontrar um conjunto de itens de um número que definimos em nosso dicionário, cada um com um peso e valor associado, que maximize o valor total contido na mochila, considerando a capacidade limitada da mesma. A capacidade é definida como um número que a mochila pode suportar sem se rasgar, também definimos essa variável. A solução deve garantir que o peso total dos itens selecionados não ultrapasse a capacidade da mochila. O objetivo é maximizar o valor total dos itens, enquanto se mantém dentro da capacidade de peso da mochila.\n",
+    "\n",
+    "Diferente de outros experimentos, dessa vez nós demos as opções de \"genes\" que podem estar dentro do indíviduo, e não pedimos para ele gerar aleatóriamente, apenas pedimos para escolher quais que vão dentro do indivíduo. Essa é um outro desafio do qual não sabemos o resultato otimizadp, portanto, usamos o número de gerações como critério de parada para nossos agoritmos genéticos. "
    ]
   },
   {
@@ -164,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.7"
   },
   "org": null
  },
