--- a/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
+++ b/AlgoritmosGeneticos/experimento A.03 - algoritmo genetico.ipynb
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
+    "## Conclusão e discussões\n",
     "\n"
    ]
   },
