--- a/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
+++ b/AlgoritmosGeneticos/experimento A.05 - descobrindo a senha.ipynb
@@ -239,8 +239,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusão\n",
-    "\n"
+    "# Discussão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neste problema tentamos descobrir uma senha da qual nossa fução objetivo já tem conhecimento. Transformamos cada letra da senha em um valor correspondente, usamos a função **ord()**. Feito isso, pudemos calcular o fitness dos nossos indivíduos a partir da distância da senha chutada para a senha real. Para expandir um pouco mais o que seria a distância, cada gene do indivíduo é uma letra, cada letra de ordem $n$ é comparada a letra de mesma ordem na senha original, vemos o módulo da diferença das duas letras, que agora são números. Assim, temos o fitness.\n",
+    "\n",
+    "Lembrando que agora, esse é um experimento de minimização, pois queremos minimizar a distância em as senhas que chutamos para a senha real, portando agora não podemos usar o operador de seleção por roleta, usamos então a seleção por torneiro. A seleção por torneio funciona da seguinte maneira: você sorteia um número fixo de indivíduos da sua população e o que tiver o melhor valor de fitness é o selecionado. Esse valor fixo nós que escolheremos nas *constantes relacionadas ao problema*, usamos a constante *NUM_COMBATENTES_NO_TORNEIO*.\n",
+    "\n",
+    "Essas são as principais diferenças entre esse problema e problemas anteriores, a pesar de gerador de gene de indivíduo também serem diferentes por gerarem letras e não números, a maneira como funcionam são bem parecidos aos exercícios anteriores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusão"
    ]
   },
   {
